...
                  ),
                  child: Stack(
                    children: [
                      Container(
                        margin: const EdgeInsets.only(top: 16),
                        child: SingleChildScrollView(
                          key: Key('scroll_view_detail_key'),
                          controller: scrollController,
                          child: Column(
                            crossAxisAlignment: CrossAxisAlignment.start,
                            children: [
                              Text(
                                series.name!,
                                style: kHeading5,
                              ),
                              BlocBuilder<WatchlistTvSeriesStatusBloc,
                                  WatchlistTvSeriesStatusState>(
                                builder: (context, state) {
                                  return ElevatedButton(
                                    key: Key('watchlist_button_key'),
                                    onPressed: () async {
                                      state is IsWatchlistTvSeries
                                          ? context
                                              .read<WatchlistTvSeriesBloc>()
                                              .add(RemoveFromWatchlist(series))
                                          : context
...
